--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="/dist/main.css">
+        <link rel="stylesheet" type="text/css" href="../dist/main.css">
         <style type="text/css">
             body {
                 font-family: 'Arial';
